# ChessGame

./: README.md
src/: CMakeLists.txt  CMakeLists.txt.user.a9c6ab3  bishop.cpp  bishop.h  board.cpp  board.h  chessgame.cpp  chessgame.h  king.cpp  king.h  knight.cpp  knight.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  moveraii.cpp  moveraii.h  namespaces.cpp  namespaces.h  pawn.cpp  pawn.h  piece.cpp  piece.h  position.cpp  position.h  queen.cpp  queen.h  rook.cpp  rook.h  square.cpp  square.h
